# yoroshiku_onegai_shimaaasu

./: Cargo.toml  Makefile  README.md  index.css  index.html
.github/workflows/: rust.yml
pkg/: README.md  package.json  summer_wars_crypt.d.ts  summer_wars_crypt.js  summer_wars_crypt_bg.wasm  summer_wars_crypt_bg.wasm.d.ts
src/: lib.rs  simple_server.rs
