[package]
name = "summer-wars-crypt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
num-bigint = "0.4"
num-iter = "0.1.42"
num-traits = "0.2.14"

[dependencies.web-sys]
version = "0.3.51"
features = [
 "Document",
 "Element",
 "HtmlElement",
 "HtmlDivElement",
 "Node",
 "Window",
 "console"
]