[package]
name = "summer-wars-crypt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.6.3", features = ["wasm-bindgen"] }
# Versionが古いのはrandがうまく入らないから。https://github.com/rust-num/num-bigint/issues/61
num-bigint = { version = "0.2", features = ["rand"] }
num-iter = "0.1.42"
num-traits = "0.2.14"
js-sys = "0.3.51"
httparse = "1.4.1"

[dependencies.web-sys]
version = "0.3.51"
features = [
 "Document",
 "Element",
 "DomTokenList",
 "HtmlElement",
 "HtmlDivElement",
 "Node",
 "Window",
 "console"
]

[[bin]]
name = "simple_server"
path = "src/simple_server.rs"
